flatpak: update runtime and adjust JavaFX permissions